2001-04-30  Bruno Haible  <haible@clisp.cons.org>

	Silence "gcc -Wall -Wwrite-strings" warnings.
	* localcharset.c (charset_aliases): Change type to 'const char *'.
	(get_charset_aliases): Change type of 'cp' to 'const char *'.

2001-04-19  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.37 released.

2001-04-19  Bruno Haible <haible@clisp.cons.org>

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 1:1:0.

2001-04-19  Bruno Haible <haible@clisp.cons.org>

	* loadmsgcat.c (_nl_init_domain_conv): Don't append //TRANSLIT when
	the libiconv version is smaller than 1.5.

2001-04-09  Bruno Haible <haible@clisp.cons.org>

	* loadmsgcat.c: Don't use GNU C extensions if __APPLE_CC__ is defined.
	Apple's MacOS X compiler has not all the features that the regular
	GCC with the same version number has.

2001-04-07  Bruno Haible <haible@clisp.cons.org>

	* gettextP.h (struct loaded_domain): Add codeset_cntr field.
	(struct binding): Add codeset_cntr field.
	(_nl_load_domain): Add domainbinding argument.
	(_nl_init_domain_conv, _nl_free_domain_conv): New declarations.
	(_nl_find_msg): New declaration, moved here from loadinfo.h.
	* loadinfo.h (struct loaded_l10nfile): Remove domainbinding field.
	(_nl_make_l10nflist): Remove domainbinding argument.
	(_nl_find_msg): Move declaration to gettextP.h.
	* bindtextdom.c (set_binding_values): Initialize ->codeset_cntr to 0.
	Increment it when ->codeset is changed.
	* dcigettext.c (DCIGETTEXT): Pass binding to _nl_find_msg.
	(_nl_find_msg): Add domainbinding argument. Reinitialize the converter
	if domainbinding->codeset_cntr has been incremented.
	* finddomain.c (_nl_find_domain): Don't pass domainbinding to
	_nl_make_l10nflist(). Pass it to _nl_load_domain() instead.
	* l10nflist.c (_nl_make_l10nflist): Remove domainbinding argument.
	* loadmsgcat.c (_nl_init_domain_conv): New function, extracted from
	_nl_load_domain. Append //TRANSLIT also when using libiconv.